test/ui/tests/lowering/malformed-attribute-arguments.stderr
error[E018]: the lint `never-gonna-be-implied` is not defined
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:4:9
  |
4 | @(allow never-gonna-be-implied)
  |         ^^^^^^^^^^^^^^^^^^^^^^ 
  |

error[E027]: found text literal but expected positional or named path
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:7:9
  |
7 | @(allow "my lint")
  |         ^^^^^^^^^ 
  |

error[E027]: found text literal but expected path
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:8:16
  |
8 | @(forbid (lint "my other one"))
  |                ^^^^^^^^^^^^^^ 
  |

error[E019]: too few attribute arguments provided
 --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:9:1
  |
9 | @deny
  | ^^^^^ 
  |

error[E028]: found named argument `reech` but expected `reach`
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:12:11
   |
12 | @(public (reech path) "hello")
   |           ^^^^^ 
   |

error[E019]: too many attribute arguments provided
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:12:23
   |
12 | @(public (reech path) "hello")
   |                       ^^^^^^^ 
   |

error[E019]: too many attribute arguments provided
  --> ${DIRECTORY}/lowering/malformed-attribute-arguments.lushui:13:23
   |
13 | base: Base = @(static 0) "X"
   |                       ^ 
   |

error: aborting due to 7 previous errors
 note: the errors E018, E019, E027 and E028 have a detailed explanation
 help: run `lushui explain <codes...>` to view a selection of them

